# pythonProject4

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_files_reader_py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_views_py.html
src/: external_api.py  files_reader.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_external_api.py  test_files_reader.py  test_services.py  test_utils.py  test_views.py
